# pyludusavi

./: .envrc  .geminiignore  .gitignore  .pre-commit-config.yaml  .protocol  AGENTS.md  GEMINI.md  README.md  pyproject.toml  run.sh
.github/workflows/: ci.yml  workflow.yml
docs/agent_conversations/: 2026-05-05_ludusavi_wrapper.json  2026-05-07_fix_review_findings.json  2026-05-07_release_readiness.json  2026-05-07_template_alignment.json  2026-05-12_add_log_access.json  2026-05-12_fix_log_filename.json  2026-05-14_pathlib_refactoring.json  2026-05-15_custom_environment.json
docs/plans/: add_game_alias.md  cli_flag_alignment.md  custom_environment.md  final_publish_setup.md  fix_log_filename.md  fix_review_findings.md  get_game_alias.md  log_access.md  ludusavi_wrapper.md  pathlib_refactoring.md  release_v0_1_2.md  release_v0_2_1.md  template_alignment.md
docs/specs/: cli_help_audit.txt  compatibility_policy.md
docs/specs/fixtures/: backup_preview.json  config_show.json  find_success.json  find_witcher.json  schema_api_output.json  schema_config.json  schema_general_output.json
scripts/: check_tdd.sh
src/pyludusavi/: __init__.py  _environment.py  _version.py  core.py  discovery.py  main.py  models.py
tests/: test___init__.py  test__environment.py  test_alias.py  test_core.py  test_discovery.py  test_executor.py  test_log.py  test_ludusavi_data.py  test_ludusavi_integration.py  test_ludusavi_metadata.py  test_main.py  test_models.py  test_protocol.py  test_regression.py
