[project]
name = "pyludusavi"
dynamic = ["version"]
description = "Enter project description here"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "David Beall", email = "6121439+beallio@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = []
dependencies = []

[project.urls]
Homepage = "https://github.com/beallio/pyludusavi"
Repository = "https://github.com/beallio/pyludusavi"
Issues = "https://github.com/beallio/pyludusavi/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyludusavi"]

[tool.hatch.build.targets.sdist]
include = [
    "src/pyludusavi",
    "README.md",
    "LICENSE",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.uv]
cache-dir = "/tmp/pyludusavi/.uv_cache"

[tool.ruff]
line-length = 100
cache-dir = "/tmp/pyludusavi/.ruff_cache"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term"
cache_dir = "/tmp/pyludusavi/.pytest_cache"
pythonpath = ["src"]

[tool.coverage.run]
data_file = "/tmp/pyludusavi/.coverage"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "ty>=0.0.24",
]
